# Aegis

./: .gitignore  LICENSE  README.md  finalize_aegis_history.sh  forge_aegis.sh  index.html  package.json  pyproject.toml  requirements.txt  setup.py  worklog.md
.github/workflows/: ci.yml
aegis/: oc_types.py
aegis/core/: budget.py  fusion.py  oc_types.py  safety.py  swarm.py  ukf.py
docs/: BOM.md  architecture.md
scripts/: simulate.py
sim/: nevada_sim.py
simulations/: benchmark.py  nevada_scenario.py
src/aegis/: __init__.py  core.py  oc_types.py  origin_core.py
src/aegis/energy/: __init__.py  budget_manager.py
src/aegis/fusion/: __init__.py  spectral_fusion.py
src/aegis/safety/: __init__.py  proximity_lock.py
src/aegis/swarm/: __init__.py  elastic_net.py
src/aegis/ukf/: __init__.py  intercept_ukf.py
src/app/: layout.tsx  page.tsx  sitemap.ts
src/app/blog/: layout.tsx  page.tsx
src/app/case-studies/: layout.tsx  page.tsx
src/app/company/: layout.tsx
src/app/contact/: page.tsx
src/app/integrations/: layout.tsx  page.tsx
src/app/investors/: page.tsx
src/app/news/: page.tsx
src/app/partners/: layout.tsx  page.tsx
src/app/request-demo/: page.tsx
src/app/resources/: layout.tsx  page.tsx
src/app/security-advisories/: layout.tsx  page.tsx
src/app/support/: layout.tsx  page.tsx
src/app/threat-database/: layout.tsx  page.tsx
src/lib/: form-store.ts
tests/: run_tests.py  test_aegis.py  test_all.py  test_core.py  test_energy.py  test_fusion.py  test_oc_types.py  test_safety.py  test_swarm.py  test_ukf.py
web/: index.html
(+110 files in other folders)
